# typepack

./: .gitignore  README.md  pyproject.toml
fastpack/: __init__.py  core.py  types.py
tests/: test_core.py  test_extensibility.py  test_types.py
