[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastpack"
version = "0.2.0"
description = "A fast, zero-dependency binary serialization library for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niler Barcelos" }
]
keywords = ["serialization", "binary", "msgpack", "pack", "unpack", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/nilerbarcelos/fastpack"
Repository = "https://github.com/nilerbarcelos/fastpack"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "pytest {args}"

[tool.pytest.ini_options]
testpaths = ["tests"]
